--- a/src/app/components/table/table.component.scss
+++ b/src/app/components/table/table.component.scss
@@ -39,7 +39,7 @@
                 border-radius: 4px;
 
                 th {
-                    color: #fff;
+                    color: #382f2f;
                     font-weight: 500;
                     font-size: 16px;
                 }
