--- a/src/app/layout/toolbar/toolbar.component.scss
+++ b/src/app/layout/toolbar/toolbar.component.scss
@@ -1,30 +1,22 @@
 .toolbar {
+    background-color: #fff;
+
     height: 55px;
     width: 100%;
 
-    .navigation {
-        width: 100%;
+    .toolbar-nav-item {
+        color: #afa7a7;
+        width: 60px;
 
-        ul {
-            list-style: none;
-        }
-    
-        ul li {
-            cursor: pointer;
-        }
-
-        .active {
-            border-bottom: 2px solid #ccc;
-        }
-
-        .avatar {
-            height: 45px;
-            border-radius: 50%;
+        mat-icon {
+            width: 30px;
+            height: 30px;
+            font-size: 30px;
         }
     }
-}
 
-.main-content {
-    height: calc(100% - 133px);
-    padding: 20px;
+    .avatar {
+        width: 35px;
+        border-radius: 50%;
+    }
 }
