toolbar item hover

--- a/src/app/layout/toolbar/toolbar.component.html
+++ b/src/app/layout/toolbar/toolbar.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar class="toolbar">
-    <nav fxFlex="100" fxLayout="row" fxLayoutAlign="end">
+    <nav fxFlex="100" fxLayout="row" fxLayoutAlign="end" style="height: 100%;">
         <div class="toolbar-nav-item" fxLayoutAlign="center center">
             <mat-icon>notifications</mat-icon>
         </div>
