--- a/src/app/layout/drawer/drawer.component.html
+++ b/src/app/layout/drawer/drawer.component.html
@@ -5,7 +5,7 @@
 
     <div fxLayout="column" *ngIf="isOpen" style="height: 100%;">
         <div class="logo-container" fxLayoutAlign="center end">
-            <img src="/assets/images/logo2x.png" class="logo" alt="logo">
+            <img src="/assets/images/logo.JPG" class="logo" alt="logo">
         </div>
 
         <nav class="navigation" fxLayout="row" fxLayoutAlign="space-between center">
