--- a/src/app/layout/drawer/drawer.component.scss
+++ b/src/app/layout/drawer/drawer.component.scss
@@ -15,7 +15,7 @@
         height: 15%;
 
         .logo {
-            width: 70px;
+            height: 80%;
             margin-bottom: 10px;
         }
     }
