--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -42,7 +42,7 @@
                             <th mat-header-cell *matHeaderCellDef> {{col.title}} </th>
                         </ng-template>
     
-                        <td mat-cell *matCellDef="let row"> {{ row[col.name] | general:col.format }} </td>
+                        <td mat-cell *matCellDef="let row"> {{ row[col.name] | nestedValue:col.name:row | general:col.format }} </td>
                     </ng-container>
                 </ng-container>
 
