--- a/src/app/components/generic-page/page/page.component.html
+++ b/src/app/components/generic-page/page/page.component.html
@@ -1,1 +1,5 @@
-<p>page works!</p>
+<div class="general-page">
+    <mat-card class="table-card">
+        <app-table [config]="tableConfig" [actions]="actions" (signal)="onTableSignal($event)"></app-table>
+    </mat-card>
+</div>
