--- a/src/app/components/students/students.component.html
+++ b/src/app/components/students/students.component.html
@@ -1,1 +1,1 @@
-<app-table [config]="studentsConfig" [actions]="actions" (signal)="onTableSignals($event)"></app-table>
+<app-table [config]="studentsConfig.tableConfig" [actions]="actions" (signal)="onTableSignals($event)"></app-table>
