--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,11 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.mr-3 {
+	margin-right: 1rem;
+}
+
+.mb-3 {
+	margin-bottom: 1rem;
+}
