--- a/src/app/shared/generic-page/form/form.component.scss
+++ b/src/app/shared/generic-page/form/form.component.scss
@@ -9,4 +9,12 @@
 	.mat-radio-button ~ .mat-radio-button {
         margin: 0 0 10px 16px;
     }
+
+	.mr-3 {
+		margin-right: 1rem;
+	}
+	
+	.mb-3 {
+		margin-bottom: 1rem;
+	}
 }
