no record found in generic table

--- a/src/app/shared/generic-page/table/table.component.html
+++ b/src/app/shared/generic-page/table/table.component.html
@@ -67,7 +67,7 @@
                     style="cursor: pointer;" (click)="onRowClick(row)">
                 </tr>
 
-                <!-- <tr mat-row *matRowDef="let row; columns: ['error']; when: showError"></tr> -->
+                <tr mat-row *matRowDef="let row; columns: ['error']; when: showError"></tr>
             </table>
         </div>
     </div>
