All employees list working.

--- a/src/app/components/courses/add-course/add-course.component.html
+++ b/src/app/components/courses/add-course/add-course.component.html
@@ -27,7 +27,7 @@
 				</mat-option>
 			</mat-select>
 			<mat-error *ngIf="theForm.controls['teacher'].hasError('required')">
-				teacher is required.
+				Teacher is required.
 			</mat-error>
 		</mat-form-field>
 
