some minor changes

--- a/src/app/components/courses/add-course/add-course.component.html
+++ b/src/app/components/courses/add-course/add-course.component.html
@@ -1,6 +1,6 @@
 <div class="container" fxLayout="column">
 	<div fxLayout="row" fxLayoutAlign="space-between center">
-		<h2 style="margin: 0;">Add Course</h2>
+		<h2 style="margin: 0;">{{ id ? 'Update Course' : 'Add Course' }}</h2>
 		<button mat-icon-button matDialogClose>
 			<mat-icon>close</mat-icon>
 		</button>
