--- a/src/app/shared/generic-page/table/table.component.html
+++ b/src/app/shared/generic-page/table/table.component.html
@@ -54,12 +54,11 @@
                     </th>
                 </ng-container>
 
-                <ng-container matColumnDef="error">
-                    <td mat-cell *matCellDef="let row" colspan="100%">
-                        <div>{{row.title}}</div>
-                        <p *ngIf="row.message">{{row.message}}</p>
-                    </td>
-                </ng-container>
+				<tr class="mat-row" *matNoDataRow>
+					<td class="mat-cell" colspan="100%">
+					  	No data matching the filter
+					</td>
+				</tr>
 
                 <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true;"></tr>
                 <tr mat-header-row *matHeaderRowDef="['loading']; sticky: true;" style="height: 3px !important;"></tr>
@@ -68,14 +67,12 @@
                     [class.selected]="row == selectedRow"
                     style="cursor: pointer;" (click)="onRowClick(row)">
                 </tr>
-
-                <tr mat-row *matRowDef="let row; columns: ['error']; when: showError"></tr>
             </table>
         </div>
     </div>
 
     <mat-paginator class="paginator"
-        [pageSize]="5" 
+        [pageSize]="limit" 
         [pageSizeOptions]="pageSizeOptions" 
         [length]="totalRecords"
         (page)="onPageChange($event)">
