--- a/src/app/shared/alert-dialog/alert.component.scss
+++ b/src/app/shared/alert-dialog/alert.component.scss
@@ -2,7 +2,7 @@
 	display: flex;
 	flex-direction: column;
     border-radius: 4px;
-	text-align: center;
+	align-items: center;
 	
 	.title {
 		font-size: 1.2rem;
@@ -11,5 +11,20 @@
 
 	.action-btn {
 		flex: 0 1 30%;
+	}
+
+	.error {
+		border-radius: 50%;
+		width: 60px;
+		height: 60px;
+		
+		border: 2px solid #f27474;
+		color: #f27474;
+
+		mat-icon {
+			font-size: 28px;
+			height: 28px;
+			width: 28px;
+		}
 	}
 }
