--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,5 +8,9 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 }
 
 .mt-3 {
-	margin-top: 1rem;
+	margin-top: 1rem !important;
+}
+
+.mb-3 {
+	margin-bottom: 1rem !important;
 }
