--- a/src/app/layout/toolbar/toolbar.component.html
+++ b/src/app/layout/toolbar/toolbar.component.html
@@ -1,11 +1,7 @@
 <mat-toolbar class="toolbar">
     <nav fxFlex="100" fxLayout="row" fxLayoutAlign="end" style="height: 100%;">
-        <div class="toolbar-nav-item" fxLayoutAlign="center center">
-            <mat-icon>notifications</mat-icon>
-        </div>
-
-        <div class="toolbar-nav-item" fxLayoutAlign="center center">
-            <mat-icon>mark_email_unread</mat-icon>
+        <div class="toolbar-nav-item" fxLayoutAlign="center center" routerLink="settings">
+            <mat-icon>settings</mat-icon>
         </div>
 
         <div class="toolbar-nav-item" fxLayoutAlign="center center">
