--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,3 +14,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .mb-3 {
 	margin-bottom: 1rem !important;
 }
+
+.width-h-p {
+	width: 100%;
+}
