--- a/src/app/shared/generic-page/table/table.component.scss
+++ b/src/app/shared/generic-page/table/table.component.scss
@@ -63,6 +63,12 @@
 	:host ::ng-deep .search-field .mat-form-field-wrapper {
 		padding: 0 !important;
 	}
+
+	.image {
+		width: 50px;
+		height: 50px;
+		border-radius: 50%;
+	}
 }
 
 ::ng-deep .mat-sort-header-stem {
