--- a/src/app/shared/generic-page/table/table.component.html
+++ b/src/app/shared/generic-page/table/table.component.html
@@ -63,8 +63,8 @@
 
 				<ng-container matColumnDef="error">
                     <td mat-cell *matCellDef="let row" colspan="100%">
-                        <h3>{{row.title}}</h3>
-                        <p>{{row.message}}</p>
+                        <h3 style="margin: 0;">{{row.title}}</h3>
+                        <p *ngIf="row.message">{{row.message}}</p>
                     </td>
                 </ng-container>
 
