--- a/src/app/shared/generic-page/form/form.component.scss
+++ b/src/app/shared/generic-page/form/form.component.scss
@@ -23,4 +23,11 @@
 		top: -30px;
 		right: 0;
 	}
+
+	.overflow {
+		width: 75%;
+		text-overflow: ellipsis;
+		white-space: nowrap;
+		overflow: hidden;
+	}
 }
