--- a/src/app/shared/generic-page/table/table.component.html
+++ b/src/app/shared/generic-page/table/table.component.html
@@ -45,7 +45,7 @@
 
 						<ng-container *ngIf="col.format === 'image'; else nonImageCell">
 							<td mat-cell *matCellDef="let row">
-								<img [src]="row[col.name]" class="image">
+								<img [src]="row[col.name] || '/assets/images/no_image.png'" class="image">
 							</td>
 						</ng-container>
     
