set max-width for table cell

--- a/src/app/shared/generic-page/table/table.component.scss
+++ b/src/app/shared/generic-page/table/table.component.scss
@@ -43,6 +43,10 @@
                     font-size: 16px;
                 }
             }
+
+			td {
+    			max-width: 20rem;
+			}
         }
 
         .selected {
